[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.13.0"
multimap = "0.9.1"
lazy_static = "1.4.0"
regex = "1.10.2"
itertools = "0.12.0"
rayon = "1.8"